--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,3 +6,4 @@ pyyaml==4.2b1        # CVE-2017-18342
 urllib3==1.24.1      # CVE-2019-11324
 tensorflow==1.13.1   # CVE-2020-15202
 pillow==6.2.1        # CVE-2020-10177
+paramiko==2.4.1
